I add some actions to possible axios errors. Also code has been formated by prettier and i deleted some unnecessary files

--- a/src/styles/theme/theme.scss
+++ b/src/styles/theme/theme.scss
@@ -1,8 +1,8 @@
-@import '../fonts';
-@import '../global';
-@import '../mixins';
-@import '../variables';
+@import "../fonts";
+@import "../global";
+@import "../mixins";
+@import "../variables";
 
-@import './components/app-styles.scss';
-@import './components/myform-styles.scss';
-@import './components/greetings-styles.scss';
+@import "./components/app-styles.scss";
+@import "./components/myform-styles.scss";
+@import "./components/greetings-styles.scss";
