--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -2,22 +2,16 @@
 // **************************
 $c-border: #fcfcfc;
 $c-error: #ff0000;
-$c-input-text: #00004d
+$c-input-text: #00004d;
 
+// *Fonts
+// ***************************
 
- // *Fonts
- // ***************************
-
-
- // *paddings, margins
+// *paddings, margins
 // **************************
-
-
 
 // Breakpoints
 //***********************
 
-
 //Sizes
 // *********************
-
