--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -1,8 +1,8 @@
-html{
-	font-size: 62.5%;
+html {
+  font-size: 62.5%;
 }
 
-body{
-	margin: 0;
-	font-family: 'Lato', sans-serif
+body {
+  margin: 0;
+  font-family: "Lato", sans-serif;
 }
