--- a/src/styles/theme/components/greetings-styles.scss
+++ b/src/styles/theme/components/greetings-styles.scss
@@ -1,29 +1,33 @@
-.greetings{
-    @include setFlex(column, center, center);
-    width:100%;
-    height:20%;
-    padding: 1rem 2rem;
-    box-sizing: border-box;
-    font-size:4rem;
-    font-weight: 600;
-    color: white;
-    text-align: center;
-    animation: greetingsAppears 4s;
+.greetings {
+  @include setFlex(column, center, center);
+  width: 100%;
+  height: 20%;
+  padding: 1rem 2rem;
+  box-sizing: border-box;
+  font-size: 4rem;
+  font-weight: 600;
+  color: white;
+  text-align: center;
+  animation: greetingsAppears 4s;
 }
 
 @keyframes greetingsAppears {
-    0%   {color:transparent;}
-    100% {color:white;}
+  0% {
+    color: transparent;
   }
+  100% {
+    color: white;
+  }
+}
 
-  @media only screen and (max-width: 768px) {
-    .greetings{
-        font-size: 3rem;
-    }
+@media only screen and (max-width: 768px) {
+  .greetings {
+    font-size: 3rem;
+  }
 }
 
 @media only screen and (max-width: 480px) {
-    .greetings{
-        font-size: 2rem;
-    }
+  .greetings {
+    font-size: 2rem;
+  }
 }
